# kaggle-santa-2024-perplexity-permutation-puzzle

./: .gitignore  README.md  pyproject.toml
run/: submit.sh
src/santa_2024/: __init__.py  scorer.py
